--- a/style.css
+++ b/style.css
@@ -48,4 +48,110 @@ border-top: 03px solid #d63031;
     border-width: 2px;
     margin-top: 06px;
 }
+.button {
+    transition-duration: 0.4s;
+    border-radius: 5px;
+    padding-left: 20px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+}
+.button:hover {
+    background-color: #ed7966; /* Green */
+    text-decoration: none;
+}
+#digiticket:hover{
+    background-color: #02679a; /* Green */
+    text-decoration: none;
+    color: white;
+}
+#mlab:hover{
+    background-color: limegreen; /* Green */
+    text-decoration: none;
+    color: white;
+}
+
+#atti:hover{
+    background-color: rgb(7, 7, 95); /* Green */
+    text-decoration: none;
+    color: white;
+}
+
+#ayamah:hover{
+    background-color: lightblue; /* Green */
+    text-decoration: none;
+    color: white;
+}
     
+
+/* Digiticket page info */
+
+* {
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: Arial;
+    padding: 20px;
+    background: #f1f1f1;
+  }
+  
+  /* Header/Blog Title */
+  .header {
+    padding: 30px;
+    font-size: 40px;
+    text-align: center;
+    background: white;
+  }
+  
+  /* Create two unequal columns that floats next to each other */
+  /* Left column */
+  .leftcolumn {
+    float: left;
+    width: 75%;
+  }
+  
+  /* Right column */
+  .rightcolumn {
+    float: left;
+    width: 25%;
+    padding-left: 20px;
+  }
+  
+  /* Fake image */
+  .fakeimg {
+    background-color: #aaa;
+    width: 100%;
+    padding: 20px;
+  }
+  
+  /* Add a card effect for articles */
+  .card {
+    background-color: white;
+    padding: 20px;
+    margin-top: 20px;
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Footer */
+  .footer {
+    padding: 20px;
+    background: #ddd;
+    margin-top: 20px;
+    float: inline-end;
+    display: flex;
+    gap: 150px;
+  }
+  
+  /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 800px) {
+    .leftcolumn, .rightcolumn {
+      width: 100%;
+      padding: 0;
+    }
+  }
